Upped lib versions and got rid of larvitfs and special include monkey patch in ejs.

--- a/test_environments/includes/public/templates/test/untz.tmpl
+++ b/test_environments/includes/public/templates/test/untz.tmpl
@@ -1,7 +1,7 @@
 <html>
 	<head><title>test</title></head>
 	<body>
-		<%- include('../inc/heading', {'wakka': 'boo'}) %>
+		<%- include('../inc/heading.tmpl', {'wakka': 'boo'}) %>
 		<p><%= data.wakka %></p>
 	</body>
 </html>
